fix: tentative d'alignement avec le design de Louis

--- a/custom.css
+++ b/custom.css
@@ -1,11 +1,16 @@
 body {
   font-family: 'Work Sans', sans-serif;
-  background-color: #f3f3f3;
+  background-color: white;
   color: #1B1F3B;
 }
 .bg-red {
   background-color: #FB8F8A;
 }
+
+.bg-orange {
+  background-color: #ff6b46;
+}
+
 .bg-blue {
   background-color: #375ABB;
 }
@@ -48,5 +53,66 @@ body {
 
 .navbar-brand {
   font-size: 18px;
-  font-weight: 600; /* semibold */
+  font-weight: 700; /* semibold */
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: 700; /* semibold */  
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 700; /* semibold */  
+}
+
+p {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.appel-title {
+  font-size: 22px;
+  font-weight: normal;
+  color: white;
+  background-color: #ff6b46;
+}
+
+.highlight-blue {
+  color: #0d6fec;
+}
+
+.highlight-orange {
+  color: #ff6b46;
+}
+
+.lead {
+  font-size: 22px;
+  font-weight: 500; /* medium */
+}
+
+a {
+  color: rgb(27, 31, 59);
+  text-decoration: underline;
+  text-decoration-color: #ff6b46;
+}
+
+a.nav-link {
+  text-decoration: none;
+}
+
+a.btn {
+  text-decoration: none;
+}
+
+.underline-blue {
+  text-decoration: underline;
+  text-decoration-color: #0d6fec;
+  text-decoration-thickness: 3px;
+}
+
+.overline-blue {
+  text-decoration: overline;
+  text-decoration-color: #0d6fec;
+  text-decoration-thickness: 3px;
 }
